tests/neg/parser_funcptr_higher_order_param_in_var_decl.baa
// EXPECT: غير مدعوم: استخدام نوع بديل لمؤشر دالة داخل توقيع مؤشر دالة

نوع أ = دالة(صحيح) -> صحيح.

صحيح الرئيسية() {
    دالة(أ) -> صحيح ف = عدم.
    إرجع ٠.
}
